# pycord-tf

./: .gitignore  README.md  bot.py  create_db.py  db_cleanup_consolidate.py  main.py  pyproject.toml  template.env  test.json  websocket_event.json  websocket_service.py
src/: item_similarity.py
src/extras/: item_list.json
tests/: __init__.py
